# AIBA

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  beats.yaml  index.html  main.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  rules.md  sitemap.xml
.github/workflows/: ci.yml  docs.yml
aiba-beats/cli/: index.html
aiba-beats/introduction/: index.html
aiba-beats/scheduling/: index.html
contributing/: index.html
contributors/: index.html
core-concepts/effort/: index.html
core-concepts/modes/: index.html
core-concepts/templates/: index.html
docs/: CNAME  contributing.md  contributors.md  engineering.md  getting-started.md  index.md  troubleshooting.md
docs/aiba-beats/: cli.md  introduction.md  scheduling.md
docs/assets/: extra.css
docs/core-concepts/: effort.md  modes.md  templates.md
docs/security/: guardrails.md
docs/settings/: environment.md
docs/tools/: common-tools.md  main-agent.md  sub-agent.md
docs/ui/: tui.md
docs/usage/: browser-session.md  repl.md  sessions.md
engineering/: index.html
getting-started/: index.html
search/: search_index.json
security/guardrails/: index.html
sessions/: time_check_in_newyork.json
settings/environment/: index.html
src/agents/: main_agent.py  sub_agent.py
src/prompts/: __init__.py  effort.py  models.py  templates.py
src/services/: beat_cli.py  beats.py  rendering.py  repl.py  screens.py  session.py
src/tools/: common_tools.py
src/utils/: settings.py
tests/: conftest.py
tests/unit/: test_beat_cli.py  test_beats.py  test_common_tools.py  test_effort_configs.py  test_main_agent.py  test_prompt_models.py  test_rendering.py  test_repl.py  test_screens.py  test_session.py  test_settings.py  test_sub_agent.py
tools/common-tools/: index.html
tools/main-agent/: index.html
tools/sub-agent/: index.html
troubleshooting/: index.html
ui/tui/: index.html
usage/browser-session/: index.html
usage/repl/: index.html
usage/sessions/: index.html
